--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "chat-backend"]
 	path = chat-backend
 	url = https://github.com/iqbaldeep/chat-backend.git
+[submodule "configurations"]
+	path = configurations
+	url = https://github.com/iqbaldeep/configurations.git
